@@ -1,3 +1,9 @@
+2013-06-08  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* xgselect.c (xg_select): Remove call to window_system_available
+	and g_main_context_pending at the top, so Gdk events (i.e. file
+	notify) are processed when Emacs is started with -nw.
+
 2013-06-07  Eli Zaretskii  <eliz@gnu.org>
 
 	* Makefile.in (ctagsfiles1, ctagsfiles2): Don't include *.m files.
